--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap');
 
+* {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: black;
     color: white;
